--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
+   <header>
+
+    <div class="banner">
+    <h3 class="banner-wish">Happy New Year</h3>
+    <h1 class="banner-title">New Year Party<br>Celebration</h1></div>
+
+   </header>
+   <main>
+    <section>
+        <div>
+            <h1 class="discount">65% OFF</h1>
+            <h6 class="comment">OUR HOLIDAY DEALS ARE BETTER</h6>
+            <h3 class="every">ALL CATEGORIES</h3>
+        </div>
+        <div class="section1"><img src="resources/Newyear.png" alt=""></div>
+    </section>
+    <section class="section2">
+    <div class="flex">
+        <div class="combined">
+            <div class="twice"><h2 class="enjoy">Welcome to midnight party</h2>
+            <p class="section2p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+            <div>
+                <button>Join Now</button>
+            </div>
+        </div>
+            <div class="sec2img"><img src="resources/Group 70.png" alt="">
+            </div>
+
+        </div>
+    </section>
+
+   </main>
+   <footer>
+
+   </footer>
     
 </body>
 </html>
