--- a/index.html
+++ b/index.html
@@ -31,14 +31,29 @@
             <p class="section2p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         </div>
             <div>
-                <button>Join Now</button>
+                <button class="add">Join Now</button>
             </div>
+            
         </div>
             <div class="sec2img"><img src="resources/Group 70.png" alt="">
             </div>
 
         </div>
     </section>
+
+<section class="four">
+    <div><div class="step1">
+        <h3><span>Place:</span> New Park Hotel <br>
+            <span>Date:</span> 31 December Night 2023 <br>
+            <span>Time:</span> Evening 7.30 pm to 12.30 am</h3></div>
+    <div><button class="go">Join Now</button></div>
+</div>
+
+
+</section>
+    
+
+    </div>
 
    </main>
    <footer>
