--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="section2">
             <div class="flex">
                 <div class="combined">
-                    <div class="twice">
+                    <div>
                         <h2 class="enjoy">Welcome to midnight party</h2>
                         <p class="section2p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
                             molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
@@ -46,39 +46,143 @@
             </div>
         </section>
 
-        <section class="three">
-            <div>
+        <section>
+            <div class="three">
                 <div class="step1">
                     <h3><span>Place:</span> New Park Hotel <br>
                         <span>Date:</span> 31 December Night 2023 <br>
                         <span>Time:</span> Evening 7.30 pm to 12.30 am
                     </h3>
                 </div>
-                <div><button class="go">Join Now</button></div>
+                <div class="togo"><button class="go">Join Now</button></div>
             </div>
         </section>
-        <section>
-            <div class="conain"><div>
-                <h3 class="sec4h3">NEW BEST OFFER</h3>
-                <h1 class="sec4h1">Coming Soon</h1>
-                <p class="sec4p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+        <section class="four">
+            <div class="conain">
+                <div>
+                    <h3 class="sec4h3">NEW BEST OFFER</h3>
+                    <h1 class="sec4h1">Coming Soon</h1>
+                    <p class="sec4p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod. </p>
                 </div>
-            
-            <div><img src="resources/Ellipse 1.png" alt=""></div>
-            <div>
-                <h1>2024</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                <img src="resources/Group 96.png" alt="">
+
+                <div class="redborder"><img class="roundimg" src="resources/Ellipse 1.png" alt=""></div>
+                <div class="sec3last">
+                    <h1 class="year">2024</h1>
+                    <p class="sec3p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="resources/Group 96.png" alt="">
+                </div>
+
             </div>
-        
-    </div>
 
         </section>
+        <section class="five">
+            <div>
+                <h5 class="question">WHAT IS FUNCTIONAL</h5>
+            </div>
+            <div>
+                <h1 class="offer"><span class="sec5h1">Holidays</span> Sale 50%</h1>
+            </div>
+            <div class="sec5para">
+                <p class="sec5p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+            </div>
+
+
+            <div class="joinpic">
+                <img class="box" src="resources/Group 75.png" alt="">
+                <img class="redbuttom" src="resources/Rectangle 2.png" alt="">
+            </div>
+            <div>
+                <img class="redround" src="resources/Group 44.png" alt="">
+                <img src="resources/Rectangle 1.png" alt="">
+            </div>
+
+        </section>
+
+
+        <section class="sec6">
+            <div class="gapsec6">
+                <h5 class="sec6h5">THE BEST GIFTS</h5>
+                <h2 class="sec6h2">Our Awesome Portfolio</h2>
+                <p class="sec6p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
+                    Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="gappic">
+                <div class="sec6picset">
+                    <div><img src=" resources/Rectangle 3.png" alt=""></div>
+                    <div><img src="resources/Rectangle 4.png" alt=""></div>
+                    <div><img src="resources/Rectangle 5.png" alt=""></div>
+
+
+                </div>
+
+                <div class="sec6picset2">
+                    <div><img src="resources/Rectangle 6.png" alt=""></div>
+                    <div><img src="resources/Rectangle 7.png" alt=""></div>
+                    <div><img src="resources/Rectangle 8.png" alt=""></div>
+
+                </div>
+
+            </div>
+
+        </section>
+        <section class="seven">
+            <div>
+                <div><img class="sec7pic" src="resources/Group 61.png" alt=""></div>
+                <div>
+                    <h2 class="sec7h2">Subscribe Newsletter</h2>
+                </div>
+                <div>
+                    <p class="sec7p">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+
+                <div class="sec7last">
+                    <input placeholder="user@gmail.com" type="email">
+                    <button class="sec7b">Subscribe</button>
+                </div>
+
+            </div>
+
+
+
+        </section>
+
 
 
     </main>
     <footer>
+        <div class="footcont">
+            <div class="footflex">
+                <div>
+                    <p class="secfootp">44, Big Building Roosevelt Street
+                        Beach Gardens Florida 33410</p>
+                </div>
+                <div class="footb">
+
+                    <div><img src="resources/Call.png" alt="">
+                        <button class="lastb">+00 123 584 124</button>
+                    </div>
+                    <div><img src="resources/Website.png" alt="">
+                        <button class="lastb2">www.website.com</button>
+                    </div>
+                </div>
+            </div>
+            <div class="lasticon">
+                <img src="resources/Facebook.png" alt="">
+                <img src="resources/Instagram.png" alt="">
+                <img src="resources/Twitter.png" alt="">
+                <img src="resources/Linkedin.png" alt="">
+            </div>
+            <div class="footerflex">
+                <p class="footerp">2017, All Rights Reserved.</p>
+                <button class="footerb">Unsubscribe</button>
+            </div>
+
+        </div>
 
     </footer>
 
